--- a/public/index.html
+++ b/public/index.html
@@ -6,15 +6,25 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="NF | new project CLOUDS (THE MIXTAPE) available 3.26.21. Come party with us!" />
+  <title>NF – CLOUDS (THE MIXTAPE) | Release Event</title>
+  <meta name="title" content="NF – CLOUDS (THE MIXTAPE) | Release Event">
+  <meta name="description"
+    content="Celebrate with us  the release of NF's brand new album CLOUDS (THE MIXTAPE). Available 3.26.21. ">
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <meta property="og:locale" content="en_US" />
-  <meta property="og:type" content="website" />
-  <meta property="og:title" content="NF | CLOUDS (THE MIXTAPE)" />
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://nf-release.vercel.app/">
+  <meta property="og:title" content="NF – CLOUDS (THE MIXTAPE) | Release Event">
   <meta property="og:description"
-    content="NF | new project CLOUDS (THE MIXTAPE) available 3.26.21. Come party with us!" />
-  <meta property="og:url" content="https://www.clouds.vercel.app" />
+    content="Celebrate with us  the release of NF's brand new album CLOUDS (THE MIXTAPE). Available 3.26.21. ">
+  <meta property="og:image" content="%PUBLIC_URL%/main.jpeg">
   <meta property="og:site_name" content="NF" />
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://nf-release.vercel.app/">
+  <meta property="twitter:title" content="NF – CLOUDS (THE MIXTAPE) | Release Event">
+  <meta property="twitter:description"
+    content="Celebrate with us  the release of NF's brand new album CLOUDS (THE MIXTAPE). Available 3.26.21. ">
+  <meta property="twitter:image" content="%PUBLIC_URL%/main.jpeg">
 
   <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -30,7 +40,6 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>NF – CLOUDS (THE MIXTAPE) | Relase Party</title>
 </head>
 
 <body>
