--- a/public/index.html
+++ b/public/index.html
@@ -17,14 +17,16 @@
   <meta property="og:title" content="NF – CLOUDS (THE MIXTAPE) | Release Event">
   <meta property="og:description"
     content="Celebrate with us  the release of NF's brand new album CLOUDS (THE MIXTAPE). Available 3.26.21. ">
-  <meta property="og:image" content="%PUBLIC_URL%/main.jpeg">
+  <meta property="og:image"
+    content="https://api.vercel.com/now/files/8ccb4fac5edbea3d720d6ed29278bc411dc376c1974e061b12f97d89c761dace/main.jpeg">
   <meta property="og:site_name" content="NF" />
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://nf-release.vercel.app/">
   <meta property="twitter:title" content="NF – CLOUDS (THE MIXTAPE) | Release Event">
   <meta property="twitter:description"
     content="Celebrate with us  the release of NF's brand new album CLOUDS (THE MIXTAPE). Available 3.26.21. ">
-  <meta property="twitter:image" content="%PUBLIC_URL%/main.jpeg">
+  <meta property="twitter:image"
+    content="https://api.vercel.com/now/files/8ccb4fac5edbea3d720d6ed29278bc411dc376c1974e061b12f97d89c761dace/main.jpeg">
 
   <!--
       manifest.json provides metadata used when your web app is installed on a
